# object_cloud

./: .gitmodules  .rosinstall  CMakeLists.txt  README.md  package.xml
.github/workflows/: ci.yaml
action/: PerceiveShelf.action  PerceiveTable.action
config/: octomap_plane_detect.rviz  shelf_detector_test.rviz
include/: BoundingBox.h  VillaSurfaceDetector.h  pcl_angle_filter.h
include/object_cloud/: BlockingQueue.h  ColorBlobCloudNode.h  GroundTruthObjectCloudNode.h  ObjectCloud.h  ObjectCloudNode.h  PointCloudConstructor.h  PointCloudUtils.h  SACModelEdge.h
include/villa_object_cloud/: GroundTruthObjectCloudNode.h  ObjectCloudNode.h  PointCloudConstructor.h  SACModelEdge.h  YoloCloudNode.h  YoloModel.h
include/villa_yolocloud/: OctreeUtils.h  PointCloudConstructor.h  YoloCloud.h  YoloModel.h
launch/: color_blob_cloud_demo.launch  villa_surface_shelf_perception.launch  yolocloud.launch
msg/: BoundingBox2D.msg  BoundingBox2DList.msg  DetectedObject.msg  SearchBox.msg
scripts/: fake_odom
src/: BoundingBox.cpp  ColorBlobCloudNode.cpp  GroundTruthObjectCloudNode.cpp  ObjectCloud.cpp  ObjectCloudNode.cpp  OctreeUtils.cpp  PointCloudConstructor.cpp  PointCloudUtils.cpp  VillaSurfaceDetector.cpp  YoloCloud.cpp  YoloCloudNode.cpp  YoloModel.cpp  color_blob_cloud_node.cpp  detect_horizontal_planes.cpp  ground_truth_cloud_node.cpp  segment_objects.cpp  shelf_detector_action_server.cpp  shelf_detector_action_tester.cpp  table_detector_action_server.cpp  table_detector_action_tester.cpp  yolocloud_node.cpp
srv/: GetBoundingBoxes.srv  GetObjects.srv  GetSurfaceOccupancy.srv  GetSurfaces.srv
