<?xml version="1.0"?>
<package>
  <name>villa_surface_detectors</name>
  <version>0.0.1</version>
  <description>Package for detection world objects that have surfaces</description>

  <maintainer email="stevenjj@utexas.edu">Steven Jens Jorgensen</maintainer>
  <license>BSD</license>
  <author email="stevenjj@utexas.edu">Steven Jens Jorgensen</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>villa_octomap_server</build_depend>
  <build_depend>villa_manipulation</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tmc_yolo2_ros</build_depend>
  <build_depend>villa_object_label</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>villa_manipulation</run_depend>
  <run_depend>villa_octomap_server</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tmc_yolo2_ros</run_depend>
  <run_depend>villa_object_label</run_depend>

  <export></export>
</package>
