<?xml version="1.0"?>
<package format="2">
  <name>object_cloud</name>
  <version>0.0.0</version>
  <description>The villa_object_cloud package</description>

  <maintainer email="nswalker@cs.washington.edu">Nick Walker</maintainer>
  <maintainer email="jiangyuqian@utexas.edu">Yuqian Jiang</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>roscpp</depend>
  <depend>octomap_ros</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>tf_conversions</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>knowledge_representation</depend>


  <export>
  </export>
</package>
